# Neural-networks

./: .gitignore  pyproject.toml
lab/: Lab11 - sieci rekurencyjne_rozw.ipynb  Lab13 - NLP.ipynb  lab1_2_stud.ipynb
miniprojekt_2/: batch_norm_model.tar  data_functions.py  decay_model.tar  equalized_model.tar  final_model.tar  helper_functions.py  miniprojekt_2_bruno.ipynb  miniprojekt_2_eksperymenty.ipynb  miniprojekt_2_ewaluacja.ipynb  models.py  res_epochs.csv  res_layer.csv  starting_model.tar  test_results.csv  weights_model.tar
miniprojekt_2/piatek_ Bogiel_Sienkiewicz/: miniprojekt_2_eksperymenty.ipynb  (+2 more)
miniprojekt_3/: data_functions.py  final_model.tar  helper_functions.py  metric_functions.py  miniprojekt_3_augument.ipynb  miniprojekt_3_augumentation.ipynb  miniprojekt_3_eksperymenty.ipynb  miniprojekt_3_final.ipynb  miniprojekt_3_hiperparametry.ipynb  miniprojekt_3_hyperparameters.ipynb  miniprojekt_3_start-bruno-HP-ENVY-x360-Convertible-15-ee1xxx.ipynb  miniprojekt_3_start.ipynb  miniprojekt_3_tuning.ipynb  models.py  predictions.csv  starting_model.tar  wyniki_modeli.csv
miniprojekt_4/: evaluator.pth  gan.ipynb  helper_functions.py  models.py  training_functions.py  unet.ipynb  vae.ipynb  vae_decoder.pth  vae_encoder.pth
miniprojekt_5/: data_processing.ipynb  final.ipynb  helper_functions.py  hyperparameters.ipynb  models.py  piątek_bogiel_sienkiewicz.ipynb  starting_model.ipynb  training_functions-bruno-Z390-AORUS-PRO.py  training_functions.py
miniprojekt_6/: helper_functions.py  lstm.ipynb  piątek_sienkiewicz_eksperymenty.ipynb  pre-trained.ipynb
