[tool.poetry]
name = "ssne"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
torchvision = "^0.17.1"
ipykernel = "^6.29.3"
imblearn = "^0.0"
optuna = "^3.6.1"
plotly = "^5.22.0"
jupyterlab = "^4.2.0"
ipywidgets = "^8.1.2"
keras = "^3.3.3"
tensorflow = "^2.16.1"
evaluate = "^0.4.2"
transformers = "^4.41.2"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
